# dcegm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  benchmark_cases.ipynb  codecov.yml  consumption_savings_model.py  egm_consumption_savings_example.ipynb  egm_step.py  environment.yml  pyproject.toml  run_example.py.lprof  setup.cfg  solve.py  test_replication.py.lprof  tox.ini  xx_pre_fedor_ue_endog_grid_choice0_lagged0_period21.pickle  xx_pre_fues_policy_choice0_lagged0_period21.pickle  xx_pre_fues_value_choice0_lagged0_period21.pickle  xxinterpolate.py  xxpreue.ipynb
.envs/: testenv-linux.yml  testenv.yml  update_envs.py
.github/workflows/: continuous-integration-workflow.yml  main.yml
docs/: conf.py  index.rst  rtd_environment.yml
docs/development/: changes.rst
docs/guides/: installation.rst
docs/source/: conf.py  genindex.rst  index.rst  installation.md
docs/source/API/: genindex.rst
docs/source/How-To/: specify_exogenous_processes.md
docs/source/Tutorials/: interface_plots.ipynb  two_period_model_tutorial.ipynb
docs/source/background/: interface_plots.ipynb  limitations.rst  literature.rst  sparsity_conditions.rst  specify_exogenous_processes.md  timing_benchmarks.ipynb  two_occupation_model.ipynb  two_occupation_model_v2.ipynb  two_occupations.ipynb  two_period_model_tutorial.ipynb
docs/source/development/: changes.rst  roadmap.rst  team.rst
docs/source/guides/: batching.rst  maximal_example.ipynb  minimal_example.ipynb  practitioner_guide.rst  templates.rst  two_period_model_tutorial.ipynb
src/: consumption_retirement_model.py  consumption_savings_model.py  egm_step.py  interface.py  solve.py  upper_envelope.py  upper_envelope_step.py
src/dcegm/: __init__.py  aggregate_policy_value.py  asset_correction.py  backward_induction.py  budget.py  check_func_outputs.py  cli.py  consumption_retirement_model.py  egm.py  egm_step.py  fast_upper_envelope.py  fast_upper_envelope_org.py  final_period.py  final_periods.py  integration.py  interface.py  interpolate.py  interpolation.py  law_of_motion.py  likelihood.py  marg_utilities_and_exp_value.py  marginal_util_and_max_value.py  math_funcs.py  model_class.py  numerical_integration.py  pre_processing.py  process_functions.py  process_model.py  sim_interface.py  simulate.py  solve.py  solve_single_period.py  solve_with_badges.py  state_space.py  upper_envelope.py  upper_envelope_fast.py  upper_envelope_fast_bug.py  upper_envelope_fast_org.py  upper_envelope_fedor.py  upper_envelope_fedor_jax.py  (+3 more)
src/dcegm/egm/: aggregate_marginal_utility.py  interpolate_marginal_utility.py  solve_euler_equation.py
src/dcegm/interfaces/: index_functions.py  inspect_solution.py  inspect_structure.py  interface.py  interface_checks.py  jit_large_arrays.py  model_class.py  sim_interface.py  sol_interface.py
src/dcegm/interpolation/: interp1d.py  interp1d_dj.py  interp2d.py  interp2d_irregular.py  interpNd.py  interp_interfaces.py  interpnd_regular.py  simulation_interp.py
src/dcegm/pre_processing/: alternative_sim_functions.py  batches.py  check_model_config.py  check_model_specs.py  check_options.py  check_params.py  debugging.py  exog_processes.py  model_functions.py  params.py  process_functions.py  shared.py  (+5 more)
src/toy_models/: consumption_retirement_model.py  load_example_model.py  state_space_objects.py
tests/: _test_discrete_versus_continuous_experience_two_periods_backup.py  conftest.py  test_aggregate_policy.py  test_batch_mode_period_max.py  test_biased_sim.py  test_budget_equation.py  test_changing_choice_set.py  test_discrete_versus_continuous_experience.py  test_discrete_versus_continuous_two_period.py  test_egm.py  test_egm_step.py  test_exog_processes.py  test_fast_upper_envelope.py  test_function_wrapping.py  test_integration.py  test_integration_fues.py  test_interpnd_regular.py  test_interpolation.py  test_interpolationNd.py  test_interpolationNd_2d.py  test_interpolationNd_3d.py  test_interpolationNd_6d.py  test_jax_sorted_interpolate.py  test_law_of_motion.py  test_load_save.py  test_marg_utilities_and_exp_value.py  test_model_config.py  test_numerical_integration.py  test_options_tests.py  test_partial.py  test_partial_and_interfaces.py  test_pre_processing.py  test_preprocessing.py  test_process_model.py  test_quadrature.py  test_replication.py  test_sim_varying_taste_shock_scale.py  test_sim_varying_taste_shocks.py  test_sim_with_aux.py  test_simulate.py  (+18 more)
tests/resources/: compute_value_input.pkl  current_policy_input.pkl  current_policy_output.pkl  current_value_input.pkl  current_value_output.pkl  deaton.csv  deaton.yaml  df_simulate_fedor.csv  marginal_utilities.pkl  max_expected_values.pkl  policies_child_states.pkl  policy_egm_i.csv  policy_retirement.pkl  policy_retirement_no_taste_shocks.pkl  policy_upper_envelope_i.csv  possible_child_states.pkl  retirement_no_taste_shocks.csv  retirement_no_taste_shocks.yaml  retirement_taste_shocks.csv  retirement_taste_shocks.yaml  taste_shock_scale.pkl  val2.csv  value_egm_i.csv  value_retirement.pkl  value_retirement_taste_shocks.pkl  value_upper_envelope_i.csv  values_child_states.pkl
tests/sandbox/: benchmark_cases.ipynb  discrete_versus_continuous_experience.ipynb  interface_plots.ipynb  jax_interp2d_timing.ipynb  jax_profiler_test_marginal_util_and_exp_max_value_states_period.ipynb  jax_test_interfaces.ipynb  jax_timeit.ipynb  jax_timeit_and_profiler.ipynb  jax_timeit_large_toy_model.ipynb  loop_exercise.ipynb  time_functions_jax.ipynb  vmap_timing.py
tests/sparse_death/: budget.py  state_space.py  stochastic_processes.py  test_sparse_death.py
tests/test_models/: exog_ltc_and_job_offer.py  exog_ltc_model.py
tests/test_sparse_death/: model_functions.py  test_sparse_death.py  utility.py
tests/two_period_models/: euler_equation.py  model.py  model_functions.py
tests/utils/: __init__.py  euler_equation_two_perio.py  euler_equation_two_period.py  fast_upper_envelope_org.py  interp1d_auxiliary.py  interp2d_auxiliary.py  interpNd_helpers.py  interpolations.py  markov_simulator.py  upper_envelope_fedor.py
(+159 files in other folders)
