# ======================================================================================
# Project metadata
# ======================================================================================
[project]
name = "dcegm"
description = "Python package for solving and simulating finite-horizon stochastic discrete-continuous dynamic choice models using the DC-EGM algorithm from Iskhakov, Jørgensen, Rust, and Schjerning (QE, 2017)."
version = "0.1.0.dev0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "jax",
]
keywords = [
  "Economics",
  "DC-EGM",
  "Dynamic Programming",
  "Life Cycle Models",
  "Computational Economics",
  "Econometrics",
  "Statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
authors = [
    { name = "Max Blesch, Sebastian Gsell", email = "gsell.sebastian@gmail.com" }
]
maintainers = [
    { name = "Max Blesch, Sebastian Gsell", email = "maximilian.blesch@hu-berlin.de" }
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Github = "https://github.com/OpenSourceEconomics/dcegm"


# ======================================================================================
# Build system configuration
# ======================================================================================
[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/dcegm/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.package-data]
"dcegm" = ["templates/**/*"]


# ======================================================================================
# Misc configuration
# ======================================================================================

[tool.pytest.ini_options]
addopts = [
  "--ignore=src/dcegm/templates"
]

[tool.ruff]
target-version = "py310"
fix = true

[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"
