[metadata]
name = dcegm
description = Python implementation of the DC-EGM algorithm from Iskhakov, Jorgensen, Rust, and Schjerning (QE, 2017).
long_description = file: README.md
long_description_content_type = text/markdown
author = Sebastian Gsell
author_email = sebastian.gsell@econ.lmu.de
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    Github = https://github.com/OpenSourceEconomics/dcegm

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dcegm=dcegm.cli:cli

[check-manifest]
ignore =
    src/dcegm/_version.py
